Update product API docs
